Fix markdown list spacing (#900)
fix(markdown): add list margin-bottom 10px closes: #898

--- a/app/client/stylesheets/components/markdown-support.sass
+++ b/app/client/stylesheets/components/markdown-support.sass
@@ -12,6 +12,8 @@ code
 .pu-block-message
   .pu-paragraph
     white-space: pre-wrap
+  .pu-list-comment
+    margin-bottom: 10px
 
 .markdown-support
   margin-top: 10px
